Use List factory method